--- a/tugas1/tugas1.html
+++ b/tugas1/tugas1.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Mari Berkenalan!</title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Biodata Samuel">
+    <meta name="keywords" content="HTML">
+    <meta name="author" content="Theophilus Samuel Ghozalli">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BIODATA SAMUEL</title>
+</head>
+<body style="font-family: Arial, sans-serif; background-color:#d5d5d5; color: #333; margin: 0; padding: 20px;">
 
-    <body>
-        <h1>Biodata</h1>
-            <p>NPM    : <b>140810230054</b></p>
-            <p>Nama   : <b>Theophilus Samuel Ghozalli</b></p>
-            <p>Alamat : <b>Jalan Kresek Chrisant Blok N2 No. 37</b></p>
-            <p>Hobi   : <b>Bermain game action-RPG atau adventure-RPG, Berenang, Melihat Meme</b></p>
+    <h1 style="text-align: center; color: #2c3e50;">BIODATA</h1>
 
-        <img src="D:\Semester 3 - Pemrograman Web\tugas1\Theophilus Samuel Ghozalli.jpeg" alt="Theophilus Samuel Ghozalli">
+    <div style="text-align: center;">
+        <img src="D:\Semester 3 - Pemrograman Web\PemrogramanWeb\tugas1\Theophilus Samuel Ghozalli.jpeg" 
+             alt="Theophilus Samuel Ghozalli" 
+             style="width: 250px; height: 300px; border-radius: 10px; border: 2px solid #2c3e50; margin-bottom: 20px;">
+    </div>
 
-        <br><br>
-        <a href="https://www.unpad.ac.id/fakultas/matematika-ipa/teknik-informatika/">Link Departemen Teknik Informatika</a>
-        
-    </body>
+    <ul style="list-style-type: none; padding: 0; max-width: 600px; margin: 0 auto;">
+        <li style="padding: 10px; border-bottom: 1px solid #ccc;">NPM: <b>140810230054</b></li>
+        <li style="padding: 10px; border-bottom: 1px solid #ccc;">Nama: <b>Theophilus Samuel Ghozalli</b></li>
+        <li style="padding: 10px; border-bottom: 1px solid #ccc;">Alamat: <b>Jalan Kresek Chrisant Blok N2 No. 37</b></li>
+        <li style="padding: 10px;">Hobi: <b>Bermain game action-RPG atau adventure-RPG, Berenang, Melihat Meme</b></li>
+    </ul>
+
+    <div style="text-align: center; margin-top: 20px;">
+        <a href="https://www.unpad.ac.id/fakultas/matematika-ipa/teknik-informatika/" 
+           style="color: #3498db; text-decoration:dashed; font-weight: bold;">Link Departemen Teknik Informatika Universitas Padjadjaran</a>
+    </div>
+    
+</body>
 </html>
