--- a/tugas1/tugas1.html
+++ b/tugas1/tugas1.html
@@ -13,7 +13,7 @@
     <h1 style="text-align: center; color: #2c3e50;">BIODATA</h1>
 
     <div style="text-align: center;">
-        <img src="D:\Semester 3 - Pemrograman Web\PemrogramanWeb\tugas1\Theophilus Samuel Ghozalli.jpeg" 
+        <img src="Theophilus Samuel Ghozalli.jpeg" 
              alt="Theophilus Samuel Ghozalli" 
              style="width: 250px; height: 300px; border-radius: 10px; border: 2px solid #2c3e50; margin-bottom: 20px;">
     </div>
@@ -22,7 +22,7 @@
         <li style="padding: 10px; border-bottom: 1px solid #ccc;">NPM: <b>140810230054</b></li>
         <li style="padding: 10px; border-bottom: 1px solid #ccc;">Nama: <b>Theophilus Samuel Ghozalli</b></li>
         <li style="padding: 10px; border-bottom: 1px solid #ccc;">Alamat: <b>Jalan Kresek Chrisant Blok N2 No. 37</b></li>
-        <li style="padding: 10px;">Hobi: <b>Bermain game action-RPG atau adventure-RPG, Berenang, Melihat Meme</b></li>
+        <li style="padding: 10px;">Hobi: <b>Bermain game action-RPG atau adventure-RPG, Melihat ide-ide proyek IT yang dibuat orang lain (khususnya proyek membuat game), Melihat Meme terkini</b></li>
     </ul>
 
     <div style="text-align: center; margin-top: 20px;">
