--- a/tugas1/tugas1.html
+++ b/tugas1/tugas1.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIODATA SAMUEL</title>
 </head>
-<body style="font-family: Arial, sans-serif; background-color:#d5d5d5; color: #333; margin: 0; padding: 20px;">
+<body style="font-family: Arial, sans-serif; background-color:azure; background-size: cover; background-repeat: no-repeat; color: #333; margin: 0; padding: 20px;">
 
     <h1 style="text-align: center; color: #2c3e50;">BIODATA</h1>
 
