perubahan baru di index

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </article>
     <main>
         <h3>List Projek</h3>
-        <a href="https://theophilus0054.github.io/pemrograman-web/tugas1">Tugas 1</a>
-        <a href="https://theophilus0054.github.io/pemrograman-web/tugas2">Tugas 2</a>
-        <a href="https://theophilus0054.github.io/pemrograman-web/tugas3">Tugas 3</a>
+        <a href="https://theophilus0054.github.io/tugas1">Tugas 1</a>
+        <a href="https://theophilus0054.github.io/tugas2">Tugas 2</a>
+        <a href="https://theophilus0054.github.io/tugas3">Tugas 3</a>
     </main>
 </body>
 </html>
