--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="https://theophilus0054.github.io/tugas1">Tugas 1</a>
         <a href="https://theophilus0054.github.io/tugas2">Tugas 2</a>
         <a href="https://theophilus0054.github.io/tugas3">Tugas 3</a>
+        <a href="https://theophilus0054.github.io/tugas4">Tugas 4</a>
     </main>
 </body>
 </html>
